[gd_scene load_steps=11 format=2]

[ext_resource path="res://Card.gd" type="Script" id=1]
[ext_resource path="res://assets/card.png" type="Texture" id=2]
[ext_resource path="res://fonts/runescape_uf.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/small_pixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/artemis_boon_1.png" type="Texture" id=5]
[ext_resource path="res://assets/pom.png" type="Texture" id=6]
[ext_resource path="res://fonts/6px2bus.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Card" type="ColorRect"]
margin_right = 180.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 90, 120 )
color = Color( 0.121569, 0.121569, 0.121569, 0 )
script = ExtResource( 1 )

[node name="CardBg" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="BoonName" type="Label" parent="."]
margin_left = 9.0
margin_top = 8.0
margin_right = 173.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Hunter's Strike"
align = 1

[node name="God" type="Label" parent="."]
margin_left = 39.0
margin_top = 24.0
margin_right = 143.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "Boon of Artemis"
align = 1
valign = 1

[node name="BoonIcon" type="Sprite" parent="."]
position = Vector2( 90.5, 72.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Pom" type="Sprite" parent="."]
position = Vector2( 111.5, 91.5 )
texture = ExtResource( 6 )

[node name="ManaCost" type="Label" parent="."]
margin_left = 106.5
margin_top = 47.5
margin_right = 118.5
margin_bottom = 65.5
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="BoonDesc" type="Label" parent="."]
margin_left = 16.0
margin_top = 112.0
margin_right = 160.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 1 )
text = "Deal 15 damage, with a 50% chance of critical strike."
autowrap = true

[node name="Tween" type="Tween" parent="."]
